--- a/app/src/main/res/drawable/ic_back_btn.xml
+++ b/app/src/main/res/drawable/ic_back_btn.xml
@@ -1,10 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="34dp"
-    android:height="34dp"
+    android:width="30dp"
+    android:height="30dp"
     android:tint="@color/colorText"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="@color/colorText"
-        android:pathData="M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z" />
+        android:pathData="M21,11H6.83l3.58,-3.59L9,6l-6,6 6,6 1.41,-1.41L6.83,13H21z" />
 </vector>
+
