--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/ubuntu_medium"
         android:text="@string/cam_master"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorText"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/iv_splash_logo"
         app:layout_constraintStart_toStartOf="@+id/iv_splash_logo"
