--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/ubuntu_light"
         android:maxLines="3"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorText"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/dialog_okay"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,8 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/ubuntu_medium"
-        android:text="Cancel"
-        android:textColor="@color/colorWhite"
+        android:text="@string/cancel"
+        android:textColor="@color/colorText"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/dialog_okay"
         app:layout_constraintEnd_toStartOf="@+id/dialog_okay"
@@ -44,11 +44,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/circle_background"
+        android:background="@drawable/shape_circle_background"
         android:fontFamily="@font/ubuntu_medium"
         android:gravity="center"
         android:padding="10dp"
-        android:text="OK"
+        android:text="@string/ok"
         android:textColor="@color/colorWhite"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
