--- a/app/src/main/res/layout/dialog_convert_to_pdf.xml
+++ b/app/src/main/res/layout/dialog_convert_to_pdf.xml
@@ -10,12 +10,14 @@
         android:id="@+id/tv_convert_to_pdf"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/ubuntu_light"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="@font/ubuntu_medium"
         android:lineSpacingMultiplier="1.2"
         android:padding="10dp"
         android:text="@string/file_name_is_already_exist_please_rename_this_pdf_file"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorText"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/circle_background"
+        android:background="@drawable/shape_circle_background"
         android:drawableStart="@drawable/ic_pdf"
         android:drawablePadding="10dp"
         android:paddingStart="15dp"
