--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#EFE5FD</color>
-    <color name="colorPrimaryDark">#D4BFF9</color>
-    <color name="colorAccent">#1565C0</color>
+    <color name="colorPrimary">#3B3F48</color>
+    <color name="colorPrimaryDark">#121212</color>
+    <color name="colorAccent">#280A50</color>
     <color name="colorAccentLight">#3D1472</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#4D4D4D</color>
-    <color name="colorCardBack">#986DDF</color>
+    <color name="colorCardBack">#262035</color>
     <color name="colorRed">#FF5252</color>
     <color name="colorHighlight">#69F0AE</color>
     <color name="colorHighlightGray">#A1A1A1</color>
-    <color name="colorText">#000000</color>
+    <color name="colorText">#FFFFFF</color>
 </resources>
