--- a/app/src/main/res/layout/dialog_convert_to_pdf.xml
+++ b/app/src/main/res/layout/dialog_convert_to_pdf.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:elevation="10dp">
 
@@ -13,8 +13,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
+        android:ellipsize="end"
         android:fontFamily="@font/ubuntu_medium"
         android:lineSpacingMultiplier="1.2"
+        android:maxLines="3"
         android:padding="10dp"
         android:text="@string/file_name_is_already_exist_please_rename_this_pdf_file"
         android:textColor="@color/colorText"
@@ -25,7 +27,7 @@
 
     <EditText
         android:id="@+id/et_file_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
@@ -50,7 +52,7 @@
         android:id="@+id/btn_save_pdf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/shape_circle_background"
         android:drawableStart="@drawable/ic_pdf"
@@ -62,6 +64,7 @@
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_file_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
