--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_browse_images"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/shape_rect"
@@ -50,10 +50,16 @@
             android:id="@+id/tv_browse_images"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="14dp"
+            android:ellipsize="end"
             android:fontFamily="@font/ubuntu_medium"
             android:gravity="center"
+            android:maxLines="1"
             android:text="@string/scanned_images"
             android:textColor="@color/colorText"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/iv_browse_images"
             app:layout_constraintStart_toStartOf="@+id/iv_browse_images"
             app:layout_constraintTop_toBottomOf="@+id/iv_browse_images" />
@@ -63,7 +69,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_browse_pdf"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:background="@drawable/shape_rect"
         android:elevation="5dp"
@@ -88,10 +94,16 @@
             android:id="@+id/tv_browse_pdf"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="14dp"
+            android:ellipsize="end"
             android:fontFamily="@font/ubuntu_medium"
             android:gravity="center"
+            android:maxLines="1"
             android:text="@string/scanned_pdf"
             android:textColor="@color/colorText"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/iv_browse_pdf"
             app:layout_constraintStart_toStartOf="@+id/iv_browse_pdf"
             app:layout_constraintTop_toBottomOf="@+id/iv_browse_pdf" />
@@ -124,6 +136,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
             android:fontFamily="@font/ubuntu_light"
             android:text="@string/text_recognition"
             android:textColor="@color/colorText"
@@ -139,7 +153,7 @@
         android:id="@+id/rl_add_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_margin="20dp"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_ocr">
@@ -203,7 +217,7 @@
         <TextView
             android:id="@+id/tv_menu_share_app"
             style="@style/MenuText"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:text="@string/share_cam_master"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_menu_rate_us" />
@@ -211,7 +225,7 @@
         <TextView
             android:id="@+id/tv_settings"
             style="@style/MenuText"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:text="@string/settings"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_menu_share_app" />
@@ -219,7 +233,7 @@
         <TextView
             android:id="@+id/tv_menu_about"
             style="@style/MenuText"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:text="@string/about"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_settings" />
