--- a/app/src/main/res/layout/item_doc.xml
+++ b/app/src/main/res/layout/item_doc.xml
@@ -21,11 +21,10 @@
     <TextView
         android:id="@+id/tv_doc_name"
         style="@style/ItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/iv_doc"
@@ -35,10 +34,11 @@
     <TextView
         android:id="@+id/tv_doc_date"
         style="@style/ItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textSize="14sp"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_doc_share"
         app:layout_constraintStart_toStartOf="@+id/tv_doc_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_doc_name"
         tools:text="09/06" />
@@ -46,11 +46,12 @@
     <TextView
         android:id="@+id/tv_doc_size"
         style="@style/ItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:textSize="14sp"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_doc_share"
         app:layout_constraintStart_toEndOf="@+id/iv_doc"
         app:layout_constraintTop_toBottomOf="@+id/tv_doc_date"
         tools:text="1.0 MB" />
@@ -60,9 +61,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_doc_date" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_doc_share"
@@ -70,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_share"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_doc_delete"
         app:layout_constraintEnd_toStartOf="@+id/btn_doc_delete"
-        app:layout_constraintTop_toBottomOf="@+id/tv_doc_date" />
+        app:layout_constraintTop_toTopOf="@+id/btn_doc_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
