--- a/app/src/main/res/layout/item_pdf.xml
+++ b/app/src/main/res/layout/item_pdf.xml
@@ -22,10 +22,9 @@
     <TextView
         android:id="@+id/tv_pdf_name"
         style="@style/ItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/iv_item_pdf"
@@ -35,10 +34,11 @@
     <TextView
         android:id="@+id/tv_pdf_date"
         style="@style/ItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textSize="14sp"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_pdf_share"
         app:layout_constraintStart_toStartOf="@+id/tv_pdf_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_pdf_name"
         tools:text="09/06" />
@@ -46,10 +46,11 @@
     <TextView
         android:id="@+id/tv_pdf_size"
         style="@style/ItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textSize="14sp"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_pdf_share"
         app:layout_constraintStart_toEndOf="@+id/iv_item_pdf"
         app:layout_constraintTop_toBottomOf="@+id/tv_pdf_date"
         tools:text="1.0 MB" />
@@ -59,9 +60,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pdf_date" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_pdf_share"
@@ -69,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_share"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_pdf_delete"
         app:layout_constraintEnd_toStartOf="@+id/btn_pdf_delete"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pdf_date" />
+        app:layout_constraintTop_toTopOf="@+id/btn_pdf_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
