--- a/scanlibrary/src/main/res/drawable/ic_flash_on.xml
+++ b/scanlibrary/src/main/res/drawable/ic_flash_on.xml
@@ -1,5 +1,4 @@
-<vector android:height="40dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#e3f8fa" android:pathData="m416,512h-320c-53.023,0 -96,-42.977 -96,-96v-320c0,-53.023 42.977,-96 96,-96h320c53.023,0 96,42.977 96,96v320c0,53.023 -42.977,96 -96,96zM416,512"/>
-    <path android:fillColor="#26c6da" android:pathData="m328,224h-57.664l9.602,-81.09c0.031,-0.316 0.063,-1.262 0.063,-1.566 0,-7.359 -5.984,-13.344 -13.328,-13.344 -4.176,0 -8.16,2 -10.895,5.664l-82.449,122.336c-1.711,2.289 -2.672,5.137 -2.672,8 0,7.359 5.984,13.328 13.328,13.328h47.105l-9.73,91.953c-0.031,0.285 -0.047,1.086 -0.047,1.375 0,7.359 5.984,13.328 13.328,13.328 4.176,0 8.16,-2 10.816,-5.551l93.184,-133.121c1.711,-2.289 2.672,-5.137 2.672,-8 0.016,-7.328 -5.953,-13.313 -13.313,-13.313zM328,224"/>
+<vector android:height="30dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="m111.668,298.668h94.227l-19.453,183.914c-0.086,0.555 -0.109,2.195 -0.109,2.75 0,14.699 11.969,26.668 26.668,26.668 8.363,0 16.34,-4.012 21.633,-11.113l186.367,-266.219c3.434,-4.59 5.332,-10.262 5.332,-16 0,-14.699 -11.965,-26.668 -26.664,-26.668h-115.328l19.199,-162.199c0.063,-0.617 0.105,-2.516 0.105,-3.133 0.023,-14.699 -11.945,-26.668 -26.645,-26.668 -8.363,0 -16.34,4.012 -21.801,11.328l-164.867,244.672c-3.434,4.586 -5.332,10.262 -5.332,16 0,14.699 11.969,26.668 26.668,26.668zM111.668,298.668"/>
 </vector>
