--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -178,19 +178,24 @@
         android:src="@drawable/ic_camera"
         app:layout_constraintBottom_toBottomOf="@+id/btnFiles"
         app:layout_constraintEnd_toStartOf="@+id/btnFiles"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnFiles" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnFiles"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/shape_circle_background"
         android:elevation="5dp"
         android:padding="16dp"
         android:src="@drawable/ic_original"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/gl_end" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnCamera" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_menu"
@@ -239,6 +244,16 @@
             app:layout_constraintTop_toBottomOf="@id/tv_settings" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_search"
+        app:layout_constraintEnd_toStartOf="@id/iv_menu"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_menu"
