--- a/app/src/main/res/layout/fragment_ocr.xml
+++ b/app/src/main/res/layout/fragment_ocr.xml
@@ -68,4 +68,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/gl_top" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_speak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_speak"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gl_top" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
